# valkka-cpp-examples

./: .gitignore  README.md
example_module/: CMakeLists.txt  reinit.bash
example_module/debian/: rules
example_module/include/: example_common.h  example_filter.h  example_thread.h  makeswig.bash  module.i.base  mydecoder.h  mythread.h
example_module/python/: quicktest.py
example_module/python/test/: test_1.py
example_module/python/valkka/: README.md
example_module/python/valkka/example_module/: __init__.py
example_module/python/valkka/example_module/core/: __init__.py  version.py
example_module/src/: example_filter.cpp  example_thread.cpp  mydecoder.cpp  mythread.cpp
example_module/test/: mytest.cpp
